package(default_visibility = ["//visibility:public"])

load("@grpc_deps//:requirements.bzl", "requirement")

py_library(
  name = "resultstore_api",
  srcs = glob(["google/**/*.py"]),
  deps = [
    requirement("grpcio"),
    requirement("protobuf"),
    requirement("google-api-core"),
  ]
)

py_binary(
    name = "resultstore",
    srcs = glob(["*.py"]),
    deps = [
      "resultstore_api",
    ],
)
