package(default_visibility = ["//visibility:public"])

load("@grpc_deps//:requirements.bzl", "requirement")

py_library(
  name = "resultstore_api",
  srcs = glob(["google/**/*.py"]),
  deps = [
    requirement("grpcio"),
    requirement("protobuf"),
    requirement("google-api-core"),
  ]
)

py_binary(
    name = "resultstoreui",
    srcs = glob(["*.py"]),
    python_version = 'PY3',
    deps = [
      "resultstore_api",
    ],
)

py_test(
  name = "test_resultstoreui",
  srcs = [
    "resultstore_client_test.py"
  ],
  deps = [
    "resultstoreui",
    "resultstore_api",
  ],
  main = "resultstore_client_test.py"
)
